fixed test summary
svn path=/trunk/openspaces/; revision=13593


Former-commit-id: c092198f5df16eec7cb6affe2ed1579b23571dbb