@@ -273,7 +273,7 @@
 
         <junit forkmode="${junit.forkmode}" printsummary="yes" haltonfailure="no" haltonerror="no">
 
-            <jvmarg line="-Djava.awt.headless=true"/>
+            <jvmarg line="-Djava.security.policy=policy/policy.all -Djava.awt.headless=true -Xmx256m -XX:MaxPermSize=128m"/>
 
             <!-- Must go first to ensure any jndi.properties files etc take precedence  -->
             <classpath location="${target.testclasses.dir}"/>
